# esp-who

components/who_peripherals/who_cam/: CMakeLists.txt
components/who_task/: who_task_state.cpp
examples/ailamp_face_pose/: CMakeLists.txt  dependencies.lock.esp32_s3_eye
examples/ailamp_face_pose/build_codex_cmake/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_args.in  flash_bootloader_args  flasher_args.json  human_face_detect.espdl.S  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
examples/ailamp_face_pose/build_stage3_direct/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flash_project_args  human_face_detect.espdl.S  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  partition-table-flash_args  project_description.json  x509_crt_bundle.S
examples/ailamp_face_pose/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  camera_capture_lock.cpp  camera_capture_lock.hpp  control_policy.cpp  control_policy.hpp  face_http_result.cpp  face_http_result.hpp  face_pose.cpp  face_pose.hpp  frame_cap_pipeline.cpp  fusion_state.cpp  fusion_state.hpp  http_stream_server.cpp  http_stream_server.hpp  idf_component.yml  led_mixer.cpp  led_mixer.hpp  led_output.cpp  led_output.hpp  pose_filter.cpp  pose_filter.hpp  range_sensor.cpp  range_sensor.hpp  vl53l1x_driver.cpp  vl53l1x_driver.hpp  wifi_app.cpp  wifi_app.hpp
examples/ailamp_vl53l1x_test/: CMakeLists.txt  sdkconfig.defaults
examples/ailamp_vl53l1x_test/main/: CMakeLists.txt  (+2 more)
(+382 files in other folders)
